--- a/Segway Example/Base.lproj/Main.storyboard
+++ b/Segway Example/Base.lproj/Main.storyboard
@@ -15,6 +15,16 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jra-iv-Moz">
+                                <rect key="frame" x="20" y="20" width="42" height="30"/>
+                                <animations/>
+                                <state key="normal" title="segue"/>
+                                <connections>
+                                    <segue destination="Ngd-g0-vJz" kind="show" id="y5F-9m-dIJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -22,6 +32,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="hZQ-do-9Ad">
+            <objects>
+                <viewController id="Ngd-g0-vJz" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7bu-Yp-rJd"/>
+                        <viewControllerLayoutGuide type="bottom" id="DOk-H0-7CK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Vvq-jh-UUJ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bJF-aR-ySj">
+                                <rect key="frame" x="101" y="103" width="55" height="30"/>
+                                <animations/>
+                                <state key="normal" title="go back"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="gtx-Be-JIo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DLh-W5-yAF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="406"/>
         </scene>
     </scenes>
 </document>
